# DexSent-Robotics

./: README.md
src/crx10_moveit/: CMakeLists.txt  README.md  package.xml  setup.py
src/crx10_moveit/config/: example_trajectories.yaml  kinematics.yaml  moveit_controllers.yaml  rviz_config.rviz
src/crx10_moveit/crx10_moveit/: __init__.py  gripper_commander.py  trajectory_action_server.py
src/crx10_moveit/launch/: demo.launch.py  moveit.launch.py  rviz.launch.py
src/crx10_moveit/urdf/: crx10.urdf  crx10.xacro
src/dual_arm_controller/: CMakeLists.txt  README.md  package.xml  setup.py
src/dual_arm_controller/config/: dual_arm_controllers.yaml  dual_arm_rviz.rviz  dual_arm_trajectories.yaml
src/dual_arm_controller/dual_arm_controller/: __init__.py  cartesian_controller.py  dual_arm_synchronizer.py
src/dual_arm_controller/launch/: dual_arm_demo.launch.py  dual_arm_rviz.launch.py
src/dual_arm_controller/urdf/: dual_crx10.urdf  dual_crx10.xacro
src/robotiq_integration/: CMakeLists.txt  README.md  package.xml  setup.py
src/robotiq_integration/config/: gripper_params.yaml
src/robotiq_integration/launch/: gripper.launch.py
src/robotiq_integration/robotiq_integration/: __init__.py  gripper_node.py
